--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -48,9 +48,21 @@
                 name="quantity" value="1" title="Qty" size="4">
         </div>
     </div>
+    <!-- <div class="form-group"> -->
+        <!-- <label for="picture">Picture</label>
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" id="customFile"
+                 (change)="onFileChanged($event)" accept=".jpg,.png,.gif,.pdf,.xls,.xlsx,.doc,.docx,.ppt,.pptx">
+          <label class="custom-file-label" #labelImport for="customFile">Choose file</label>
+        </div> -->
+        <!-- <div class="invalid-feedback" *ngIf="form.picture.touched && form.picture.invalid">
+          <div *ngIf="form.picture.errors.required">Picture is required.</div>
+        </div> -->
+      <!-- </div> -->
+      
     <div class="mb-3">
         <label for="formFileSm" class="form-label">image</label>
-        <input class="form-control form-control-sm" (change)="onSelectFile($event)" id="formFileSm" formControlName="formFileImg" type="file">
+        <input class="form-control form-control-sm" (change)="onFileChanged($event)" id="formFileSm" formControlName="formFileImg" type="file">
     </div>
 
     <button type="submit">Create</button>
