--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,45 @@
-<div class="d-flex" id="wrapper">
 
-    <!-- Sidebar -->
+<div class="sidebar-nav">
+  <nav class="navbar navbar-dark bg-primary fixed-top">
+      <div class="container">
+          <!-- Mobile Menu Toggle Button -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Menus List -->
+          <div class="offcanvas offcanvas-start shadow" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-body">
+                  <ul class="navbar-nav">
+                      <li><a routerLink="/login"><i class="bi bi-calendar3"></i> <span class="item-text">login</span></a></li>
+                      <li><a routerLink="/product/add"><i class="bi bi-pencil-square"></i> <span class="item-text">add product</span></a></li>
+                      <li><a routerLink="/signup"><i class="bi bi-people"></i> <span class="item-text">signup</span></a></li>
+                      <li><a><i class="bi bi-book"></i> <span class="item-text">Books World</span></a></li>
+                      <li><a  routerLink="/products"><i class="bi bi-person-check"></i> <span class="item-text">Products</span></a></li>
+                      <li><a href="#"><i class="bi bi-envelope"></i> <span class="item-text">Email</span></a></li>
+                      <li><a href="#"><i class="bi bi-graph-up"></i> <span class="item-text">Analytics</span></a></li>
+                  </ul>
+            </div>
+          </div>
+          <div class="btn-group">
+              <a href="#" class="dropdown-toggle text-white text-decoration-none" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span class="usericon"><i class="bi bi-person-circle"></i></span>
+                  <span class="textnone">Jassa</span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                  <li><button class="dropdown-item" type="button"><i class="bi bi-lock-fill"></i> Change Password</button></li>
+                  <li><button class="dropdown-item" type="button"><i class="bi bi-gear-fill"></i> Admin Setion</button></li>
+                  <li><button class="dropdown-item" type="button"><i class="bi bi-gear-wide-connected"></i> IMAP Settings</button></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><button class="dropdown-item" type="button"><i class="bi bi-box-arrow-right"></i> Sign out</button></li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+</div>
+
+<!-- <div class="d-flex" id="wrapper">
+
+  
     <div class="bg-light border-right" id="sidebar-wrapper"  [ngClass]="status ? 'hide' : 'show'">
       <div class="sidebar-heading">Therichpost </div>
       <div class="list-group list-group-flush">
@@ -14,9 +53,7 @@
         <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
       </div>
     </div>
-    <!-- /#sidebar-wrapper -->
   
-    <!-- Page Content -->
     <div id="page-content-wrapper">
   
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -59,12 +96,12 @@
       <div class="container-fluid">
       </div>
 
-      <!-- <div class="container-fluid">
+      <div class="container-fluid">
         <h1 class="mt-4">Angular 13 Bootstrap 5 Simple Sidebar Template</h1>
         <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration.</p>
       </div>
-    </div> -->
-    <!-- /#page-content-wrapper -->
+    </div> 
+     /#page-content-wrapper 
   
-  </div>
+  </div> -->
