--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,90 @@
-<div class="container-fluid bg-trasparent my-4 p-3" style="position: relative">
-    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3"> 
-        <app-product-card *ngFor = "let product of ProductList" [Product] = 'product' ></app-product-card>
+<div class="custom-style">
+  <div class="container">
+    <div class="row">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          Sort by
+        </button>
+        <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+          <li class="dropdown-submenu">
+            <a class="dropdown-item" tabindex="-1" >price</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-item"><a tabindex="-1" (click)="OnClickPriceHighToLow()">high to low</a></li>
+              <li class="dropdown-item"><a tabindex="-1" (click)="OnClickPriceLowToHigh()">low to high</a></li>
+            </ul>
+          </li>
+          <li class="dropdown-submenu">
+            <a class="dropdown-item" tabindex="-1">name</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-item"><a tabindex="-1" (click)="OnClickAscendingName()">ascending</a></li>
+              <li class="dropdown-item"><a tabindex="-1" (click)="OnClicDescendingName()">descending</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          filters
+        </button>
+        <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+          <li class="dropdown-divider"></li>
+          <li class="dropdown-submenu">
+            <a class="dropdown-item" tabindex="-1">category</a>
+            <ul class="dropdown-menu">
+              <div *ngFor="let category of Categorylist">
+                <li class="dropdown-submenu">
+                  <a class="dropdown-item" (mouseenter)="onSelectSubcategory(category.id)">{{category.name}} </a>
+                  <ul class="dropdown-menu">
+                    <div *ngFor="let subcategory of SubcategoryList ">
+                      <li class="dropdown-item"><a
+                          (click)="getProductsBysubcategory(subcategory.id)">{{subcategory.name}}</a></li>
+                    </div>
+                  </ul>
+                </li>
+              </div>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  <button class="btn btn-secondary float-right" (click)= "getProducts()">remove filters</button>
+  <button class="btn btn-secondary float-right" (click)= "getProductsByUserId()">my products</button>
+  </div>
+  <div class="container mt-5">
+    <div class="form-group">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Search..."
+        [(ngModel)]="filterTerm"
+      />
+    </div>
+
+  <!-- <h3 class="card-header">Angular 10 Pagination Example</h3> -->
+  <div class="card-body">
+    <div class="container-fluid bg-trasparent my-4 p-3" style="position: relative">
+      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+        <app-product-card *ngFor= "let product of ProductList | filter: filterTerm | paginate
+        : {
+            itemsPerPage: tableSize,
+            currentPage: page,
+            totalItems: count
+          };
+    let i = index" [Product]='product'></app-product-card>
+      </div>
     </div>
   </div>
-  
+  <!-- <div class="card-footer pb-0 pt-3">
+        <jw-pagination [items]="items" (changePage)="onChangePage($event)"></jw-pagination>
+    </div> -->
+    <div class="d-flex justify-content-center">
+      <pagination-controls
+        previousLabel="Prev"
+        nextLabel="Next"
+        (pageChange)="onTableDataChange($event)"
+      >
+      </pagination-controls>
+    </div>
+</div>
