--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,14 +1,15 @@
 <!-- <form novalidate autocomplete="off" #form="ngForm" (submit)="onSubmit(form)"> -->
-        <h3>Add Product</h3><br>
-    <div class="mb-3">
-        <label for="category" class="form-label">product category</label>
-        <select class="form-select" [(ngModel)]="selectedCategory.id" (change)="onSelectSubcategory(selectedCategory.id)"
-            aria-label="Default select example" id="category" >
-            <option selected>select</option>
-            <option *ngFor="let category of Categorylist" value={{category.id}}>{{category.name}}</option>
-        </select>
-    </div>
-    <form [formGroup]= "newProductForm" autocomplete="off" novalidate (ngSubmit)="onSubmit(newProductForm.value)">
+<h3>Add Product</h3><br>
+<div class="mb-3">
+    <label for="category" class="form-label">product category</label>
+    <select class="form-select" [(ngModel)]="selectedCategory.id" (change)="onSelectSubcategory(selectedCategory.id)"
+        aria-label="Default select example" id="category">
+        <option selected>select</option>
+        <option *ngFor="let category of Categorylist" value={{category.id}}>{{category.name}}</option>
+    </select>
+</div>
+<form [formGroup]="newProductForm" autocomplete="off" novalidate (ngSubmit)="onSubmit(newProductForm.value)">
+    <input type="hidden" formControlName="productId">  
     <div class="mb-3">
         <label for="subcategory" class="form-label">product subcategory</label>
         <select class="form-select" aria-label="Default select example" id="subcategory" formControlName="subcategory">
@@ -19,7 +20,8 @@
     <div class="mb-3">
         <label for="discount" class="form-label">discount</label>
         <select class="form-select" aria-label="Default select example" id="discount" formControlName="discount">
-            <option *ngFor="let discount of DiscountList" value={{discount.id}}>{{discount.type}} value = {{discount.value |
+            <option *ngFor="let discount of DiscountList" value={{discount.id}}>{{discount.type}} value =
+                {{discount.value |
                 currency : "INR"}}</option>
         </select>
     </div>
@@ -27,39 +29,41 @@
         <label for="productName" class="form-label">name</label>
         <input type="text" class="form-control" id="productName" formControlName="productName">
     </div>
-    
+
     <div class=" mb-3">
         <label for="productDescription">description</label>
         <textarea class="form-control" id="productDescription" formControlName="productDescription" rows="3"></textarea>
     </div>
-    
+
     <div class="mb-3 ">
         <label for="price">price</label>
         <input type="text" id="price" class="form-control" formControlName="price" aria-label="rupees amount">
     </div>
     <div class=" mb-3">
         <label for="brand">brand</label>
-        <input type="text" class="form-control" id="brand" formControlName="brand" aria-label="Amount (to the nearest dollar)">
+        <input type="text" class="form-control" id="brand" formControlName="brand"
+            aria-label="Amount (to the nearest dollar)">
     </div>
     <div class="mb-3">
         <label for="quantity">quantity</label>
         <div class="quantity d-flex align-items-center">
-            <input type="number" id="quantity" formControlName="quantity" class="input-text qty text form-control w-25 mr-3" step="1" min="1"
-                name="quantity" value="1" title="Qty" size="4">
+            <input type="number" id="quantity" formControlName="quantity"
+                class="input-text qty text form-control w-25 mr-3" step="1" min="1" name="quantity" value="1"
+                title="Qty" size="4">
         </div>
     </div>
     <!-- <div class="form-group"> -->
-        <!-- <label for="picture">Picture</label>
+    <!-- <label for="picture">Picture</label>
         <div class="custom-file">
           <input type="file" class="custom-file-input" id="customFile"
                  (change)="onFileChanged($event)" accept=".jpg,.png,.gif,.pdf,.xls,.xlsx,.doc,.docx,.ppt,.pptx">
           <label class="custom-file-label" #labelImport for="customFile">Choose file</label>
         </div> -->
-        <!-- <div class="invalid-feedback" *ngIf="form.picture.touched && form.picture.invalid">
+    <!-- <div class="invalid-feedback" *ngIf="form.picture.touched && form.picture.invalid">
           <div *ngIf="form.picture.errors.required">Picture is required.</div>
         </div> -->
-      <!-- </div> -->
-<!-- this bottom one is the real one -->
+    <!-- </div> -->
+    <!-- this bottom one is the real one -->
     <!-- <div class="mb-3">
         <label for="formFileSm" class="form-label">image</label>
         <input class="form-control form-control-sm" (change)="onFileChanged($event)" id="formFileSm" formControlName="formFileImg" type="file">
@@ -67,7 +71,3 @@
 
     <button type="submit">Create</button>
 </form>
-
-
-
-
