--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -30,3 +30,9 @@
 {
     margin-right: 5px;
 }
+.authTextDesign{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: larger;
+}
