--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,39 +1,52 @@
-
 <div class="sidebar-nav">
   <nav class="navbar navbar-dark bg-primary fixed-top">
-      <div class="container">
-          <!-- Mobile Menu Toggle Button -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Menus List -->
-          <div class="offcanvas offcanvas-start shadow" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-body">
-                  <ul class="navbar-nav">
-                      <li><a routerLink="/login"><i class="bi bi-calendar3"></i> <span class="item-text">login</span></a></li>
-                      <li><a routerLink="/product/add"><i class="bi bi-pencil-square"></i> <span class="item-text">add product</span></a></li>
-                      <li><a routerLink="/signup"><i class="bi bi-people"></i> <span class="item-text">signup</span></a></li>
-                      <li><a><i class="bi bi-book"></i> <span class="item-text">Books World</span></a></li>
-                      <li><a  routerLink="/products"><i class="bi bi-person-check"></i> <span class="item-text">Products</span></a></li>
-                      <li><a href="#"><i class="bi bi-envelope"></i> <span class="item-text">Email</span></a></li>
-                      <li><a href="#"><i class="bi bi-graph-up"></i> <span class="item-text">Analytics</span></a></li>
-                  </ul>
-            </div>
-          </div>
-          <div class="btn-group">
-              <a href="#" class="dropdown-toggle text-white text-decoration-none" data-bs-toggle="dropdown" aria-expanded="false">
-                  <span class="usericon"><i class="bi bi-person-circle"></i></span>
-                  <span class="textnone">Jassa</span>
-              </a>
-              <ul class="dropdown-menu dropdown-menu-end">
-                  <li><button class="dropdown-item" type="button"><i class="bi bi-lock-fill"></i> Change Password</button></li>
-                  <li><button class="dropdown-item" type="button"><i class="bi bi-gear-fill"></i> Admin Setion</button></li>
-                  <li><button class="dropdown-item" type="button"><i class="bi bi-gear-wide-connected"></i> IMAP Settings</button></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><button class="dropdown-item" type="button"><i class="bi bi-box-arrow-right"></i> Sign out</button></li>
-              </ul>
-          </div>
+    <div class="container">
+      <!-- Mobile Menu Toggle Button -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Menus List -->
+      <div class="offcanvas offcanvas-start shadow" tabindex="-1" id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-body">
+          <ul class="navbar-nav">
+            <li><a routerLink="product/addEdit/0"><i class="bi bi-pencil-square"></i> <span class="item-text">add
+                  product</span></a></li>
+            <li><a><i class="bi bi-book"></i> <span class="item-text">Books World</span></a></li>
+            <li><a routerLink="/products"><i class="bi bi-person-check"></i> <span class="item-text">Products</span></a>
+            </li>
+            <li><a href="#"><i class="bi bi-envelope"></i> <span class="item-text">Email</span></a></li>
+            <li><a href="#"><i class="bi bi-graph-up"></i> <span class="item-text">Analytics</span></a></li>
+          </ul>
+        </div>
       </div>
+      <div *ngIf='isUserAuthenticated == false'>
+        <div class="row">
+          <div class="col-md-6">
+            <a routerLink="/login" class="authTextDesign">login</a>
+          </div>
+          <div class="col-md-6">
+            <a routerLink="/signup" class="authTextDesign">signup</a>
+          </div>
+        </div>
+      </div>
+      <div *ngIf='isUserAuthenticated'>
+        <div class="btn-group">
+          <a href="#" class="dropdown-toggle text-white text-decoration-none" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <span class="usericon"><i class="bi bi-person-circle"></i></span>
+            <span class="textnone">{{userName}}</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><button class="dropdown-item" type="button"><i class="bi bi-lock-fill"></i> Change Password</button>
+            </li>
+            <li><button class="dropdown-item" type="button" (click)="logout()"><i class="bi bi-box-arrow-right"></i>
+                Sign out</button></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </nav>
 </div>
 
