alomst complete except image,profileedit,validations and statistics

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <div class="clearfix mb-3">
                     <span class="float-start badge rounded-pill bg-success">{{Product?.price | currency:'INR'}}</span>
-                    <span class="float-end small text-muted text-uppercase">discount here</span>
+                    <span class="float-end small text-muted text-uppercase">{{DiscountDetails.value | currency:'INR'}} OFF</span>
                 </div>
                 <h3 class="card-title">
                     {{Product?.name}}
