--- a/src/app/productsingle/productsingle.component.html
+++ b/src/app/productsingle/productsingle.component.html
@@ -50,19 +50,11 @@
                     <hr>
 
                     <h3 class="product-price">{{ProductDetails.price | currency: 'INR' }} </h3>
-                    <h5>discount</h5>
+                    <h5>{{DiscountDetails.value| currency: 'INR'}} OFF</h5>
                     <p class="product-description my-4 ">
                         {{ProductDetails.description}}
                     </p>
-                    <form class="cart" action="#" method="post">
-                        <div class="quantity d-flex align-items-center">
-                            <input type="number" id="#" class="input-text qty text form-control w-25 mr-3" step="1"
-                                min="1" max="{{ProductDetails.quantity}}" name="quantity" value="1" title="Qty"
-                                size="4">
-                            <a href="#" class="btn btn-main btn-small">Add to cart</a>
-                        </div>
-                    </form>
-                    <br><br>
+                
                     <div class="products-meta mt-4">
                         <div class="product-category d-flex align-items-center">
                             <span class="font-weight-bold text-capitalize product-meta-title">brand :</span>
@@ -75,7 +67,7 @@
     </div>
 </section>
 <!-- <div *ngIf= "isUserAuthenticated"> -->
-    <div *ngIf="isUserAuthenticated == true">
-        <button class="btn btn-secondary float-right" routerLink="product/addEdit/ProductDetails.id">Edit Product</button>
+    <div *ngIf= "isValidProductOwner==true">
+        <a class="btn btn-secondary float-right" routerLink="../addEdit/{{ProductDetails?.id}}">Edit Product</a>
     </div>
 <!-- </div> -->
