--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,15 +13,13 @@
           <ul class="navbar-nav">
             <li><a routerLink="product/addEdit/0"><i class="bi bi-pencil-square"></i> <span class="item-text">add
                   product</span></a></li>
-            <li><a><i class="bi bi-book"></i> <span class="item-text">Books World</span></a></li>
             <li><a routerLink="/products"><i class="bi bi-person-check"></i> <span class="item-text">Products</span></a>
             </li>
-            <li><a href="#"><i class="bi bi-envelope"></i> <span class="item-text">Email</span></a></li>
             <li><a href="#"><i class="bi bi-graph-up"></i> <span class="item-text">Analytics</span></a></li>
           </ul>
         </div>
       </div>
-      <div *ngIf='isUserAuthenticated == false'>
+      <div *ngIf= 'isUserAuthenticated ==false'>
         <div class="row">
           <div class="col-md-6">
             <a routerLink="/login" class="authTextDesign">login</a>
@@ -31,7 +29,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf='isUserAuthenticated'>
+      <div *ngIf= 'isUserAuthenticated==true '>
         <div class="btn-group">
           <a href="#" class="dropdown-toggle text-white text-decoration-none" data-bs-toggle="dropdown"
             aria-expanded="false">
@@ -49,72 +47,3 @@
     </div>
   </nav>
 </div>
-
-<!-- <div class="d-flex" id="wrapper">
-
-  
-    <div class="bg-light border-right" id="sidebar-wrapper"  [ngClass]="status ? 'hide' : 'show'">
-      <div class="sidebar-heading">Therichpost </div>
-      <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-        <a  routerLink="/product/add" class="list-group-item list-group-item-action bg-light">Add Products</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Earnings</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">sign out</a>
-        <a routerLink="/login" class="list-group-item list-group-item-action bg-light">login</a>
-        <a routerLink="/signup" class="list-group-item list-group-item-action bg-light">signup</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
-      </div>
-    </div>
-  
-    <div id="page-content-wrapper">
-  
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-       
-        <div class="container-fluid">
-          <button class="btn btn-primary" (click)="clickEvent()">Toggle Menu</button>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="button">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-      <div class="container-fluid">
-      </div>
-
-      <div class="container-fluid">
-        <h1 class="mt-4">Angular 13 Bootstrap 5 Simple Sidebar Template</h1>
-        <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration.</p>
-      </div>
-    </div> 
-     /#page-content-wrapper 
-  
-  </div> -->
