changs in image upload

--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,7 +1,7 @@
 <a routerLink="/product/{{Product?.id}}">
     <div class="col hp">
         <div class="card h-100 shadow-sm">
-            <img src="https://m.media-amazon.com/images/I/81gK08T6tYL._AC_SL1500_.jpg" class="card-img-top"
+            <img ng-src="Resources/ProfilePics/19_34.png" class="card-img-top"
                 alt="product.title" />
             <div class="label-top shadow-sm">
                 <a id="product-company">{{Product?.brand}}</a>
