--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,5 +1,9 @@
 <!-- <form novalidate autocomplete="off" #form="ngForm" (submit)="onSubmit(form)"> -->
 <h3>Add Product</h3><br>
+<div class="alert alert-success custom-style" id="success-alert" role="alert" style="display: none;">
+</div>
+<div class="alert alert-danger custom-style" role="alert" id="danger-alert" style="display: none;">
+</div>
 <div class="mb-3">
     <label for="category" class="form-label">product category</label>
     <select class="form-select" [(ngModel)]="selectedCategory.id" (change)="onSelectSubcategory(selectedCategory.id)"
@@ -11,7 +15,7 @@
 
 <form [formGroup]="newProductForm" autocomplete="off" novalidate (ngSubmit)="onSubmit(newProductForm.value) ">
 
-    <input type="hidden" formControlName="productId">
+    <input type="hidden" formControlName="productId" value="0">
 
     <div class="mb-3">
         <label for="subcategory" class="form-label">product subcategory</label>
@@ -23,7 +27,6 @@
             <div *ngIf="f['subcategory'].errors['required']">subcategory is required</div>
         </div>
     </div>
-
     <div class="mb-3">
         <label for="discount" class="form-label">discount</label>
         <select class="form-select" aria-label="Default select example" id="discount" formControlName="discount">
@@ -76,6 +79,7 @@
             </div>
         </div>
     </div>
+    
     <!-- <div class="form-group"> -->
     <!-- <label for="picture">Picture</label>
         <div class="custom-file">
@@ -88,10 +92,10 @@
         </div> -->
     <!-- </div> -->
     <!-- this bottom one is the real one -->
-    <!-- <div class="mb-3">
+    <div class="mb-3">
         <label for="formFileSm" class="form-label">image</label>
-        <input class="form-control form-control-sm" (change)="onFileChanged($event)" id="formFileSm" formControlName="formFileImg" type="file">
-    </div> -->
+        <input class="form-control form-control-sm" (change)="onFileChanged($event)" id="productImg" formControlName="productImg" type="file">
+    </div>
 
     <button type="submit">Create</button>
 </form>
