--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,8 @@
                   product</span></a></li>
             <li><a routerLink="/products"><i class="bi bi-person-check"></i> <span class="item-text">Products</span></a>
             </li>
+            <li><a routerLink="/orders"><i class="bi bi-person-check"></i> <span class="item-text">orders</span></a>
+            </li>
             <li><a href="#"><i class="bi bi-graph-up"></i> <span class="item-text">Analytics</span></a></li>
           </ul>
         </div>
