--- a/src/app/productsingle/productsingle.component.html
+++ b/src/app/productsingle/productsingle.component.html
@@ -46,6 +46,14 @@
                             {{ProductDetails.brand}}
                         </div>
                     </div>
+                    <div *ngIf="isValidProductOwner==true">
+                    <div class="products-meta mt-4">
+                        <div class="product-category d-flex align-items-center">
+                            <span class="font-weight-bold text-capitalize product-meta-title"> net profit on this product:</span>
+                              &nbsp;&nbsp;&nbsp;{{netProfit|currency:"INR"}}
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
