--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,12 +17,12 @@
             </li>
             <li><a routerLink="/orders"><i class="bi bi-card-list"></i> <span class="item-text">orders</span></a>
             </li>
-            <li><a routerLink="/profile" ><i class="bi bi-person-check"></i><span class="item-text">profile</span></a>
+            <li><a routerLink="/profile"><i class="bi bi-person-check"></i><span class="item-text">profile</span></a>
             </li>
           </ul>
         </div>
       </div>
-      <div *ngIf= 'isUserAuthenticated ==false'>
+      <div *ngIf='isUserAuthenticated ==false'>
         <div class="row">
           <div class="col-md-6">
             <a routerLink="/login" class="authTextDesign">login</a>
@@ -32,7 +32,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf= 'isUserAuthenticated==true '>
+      <div *ngIf='isUserAuthenticated==true '>
         <div class="btn-group">
           <a href="#" class="dropdown-toggle text-white text-decoration-none" data-bs-toggle="dropdown"
             aria-expanded="false">
@@ -44,6 +44,8 @@
             </li> -->
             <li><button class="dropdown-item" type="button" (click)="logout()"><i class="bi bi-box-arrow-right"></i>
                 Sign out</button></li>
+            <li><button class="dropdown-item" type="button" routerLink="/passwordChange">
+                Change Password</button></li>
           </ul>
         </div>
       </div>
