--- a/src/app/productsingle/productsingle.component.html
+++ b/src/app/productsingle/productsingle.component.html
@@ -53,6 +53,12 @@
                               &nbsp;&nbsp;&nbsp;{{netProfit|currency:"INR"}}
                         </div>
                     </div>
+                    <div class="products-meta mt-4">
+                        <div class="product-category d-flex align-items-center">
+                          <span class="font-weight-bold text-capitalize product-meta-title">quantity :</span>
+                          {{ProductDetails.quantity}}
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
