--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,6 +46,8 @@
                 Sign out</button></li>
             <li><button class="dropdown-item" type="button" routerLink="/passwordChange">
                 Change Password</button></li>
+            <li><button class="dropdown-item" type="button" routerLink="/passwordChange">
+                Change Password</button></li>
           </ul>
         </div>
       </div>
