--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,8 +44,8 @@
             </li> -->
             <li><button class="dropdown-item" type="button" (click)="logout()"><i class="bi bi-box-arrow-right"></i>
                 Sign out</button></li>
-            <li><button class="dropdown-item" type="button" routerLink="/passwordChange">
-                Change Password</button></li>
+            <li><button class="dropdown-item" type="button" routerLink="/profile">
+                Profile</button></li>
             <li><button class="dropdown-item" type="button" routerLink="/passwordChange">
                 Change Password</button></li>
           </ul>
